--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
                 <button class="slider-nav next-btn">›</button>
             </div>
             
-            <marquee scrollamount="1" scrolldelay="10" truespeed="" style="text-align: start; color: #FFF; font-family: " lucida="" sans="" unicode";"="" bgcolor="#3d3d43"><span style="font-weight: 700;">THIS CODES ARE DEVELOPED BY FRXMEDIA SERVICES DEVELOPRS copyrigth@frxmediaservices.com
+            <marquee scrollamount="1" scrolldelay="10" truespeed="" style="text-align: start; color: #FFF; font-family: " lucida="" sans="" unicode";"="" bgcolor="#3d3d43"><span style="font-weight: 700;">voizonoutletsm
 </span></marquee>
 
             <!-- Hero Text Content (AFTER THE SLIDER) -->
