--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ body { font-family: 'Plus Jakarta Sans', sans-serif; }
             <div class="lg:w-5/12 w-full">
                 <div class="relative">
                     <div class="rounded-3xl overflow-hidden shadow-2xl border-b-[12px] border-orange-500">
-                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&q=80&w=800"
+                        <img src="https://i.postimg.cc/k4zw86mN/Whats-App-Image-2026-02-13-at-11-47-28-AM.jpg"
                              alt="Abdul Azeez Alungal"
                              class="w-full h-auto object-cover">
                     </div>
