--- a/index.html
+++ b/index.html
@@ -192,108 +192,95 @@ section h3 {
 }
 </style>
 
-</head>
-<body>
-
-    <header class="fixed top-4 left-0 right-0 z-50 px-3 md:px-6">
-        <div class="max-w-6xl mx-auto glass-nav-container flex flex-col md:flex-row items-center justify-between">
-            <div class="flex items-center space-x-3 w-full md:w-auto justify-center md:justify-start">
-                <img src="https://i.postimg.cc/QMB1hSN8/Whats-App-Image-2026-02-05-at-12-46-01-AM.jpg" alt="Logo" class="w-10 h-10 md:w-12 md:h-12 rounded-xl object-cover">
-                <div>
-                    <h1 class="text-2xl md:text-3xl font-extrabold leading-tight">
-                        <span class="brand-z">Z</span> <span class="text-slate-800">Pharmaka</span>
-                    </h1>
-                    <p class="text-[7px] md:text-[10px] font-bold text-gray-400 uppercase tracking-widest">Pvt Ltd | Guardian of Health</p>
-                </div>
+<header class="fixed top-4 left-0 right-0 z-50 px-3 md:px-6">
+    <div class="max-w-6xl mx-auto glass-nav-container flex flex-col md:flex-row items-center justify-between py-3">
+        <div class="flex items-center space-x-4 w-full md:w-auto justify-center md:justify-start">
+            <img src="https://i.postimg.cc/MHwxL6NL/Whats-App-Image-2026-02-11-at-8-20-37-PM.jpg"
+                 alt="Logo"
+                 class="w-14 h-14 md:w-16 md:h-16 rounded-xl object-cover shadow-md">
+            <div>
+                <h1 class="text-2xl md:text-4xl font-black leading-tight">
+                    <span class="bg-clip-text text-transparent bg-gradient-to-r from-[#059669] to-[#0284c7]">
+                        Z Pharmaka
+                    </span>
+                    <span class="text-[#0284c7] text-sm md:text-xl font-bold ml-1">Pvt ltd</span>
+                </h1>
+                <p class="text-[7px] md:text-[10px] font-bold text-gray-400 uppercase tracking-[0.3em]"> Guardian of Health</p>
             </div>
-
-            <nav class="menu-grid w-full md:w-auto">
-                <a href="#home" class="menu-pill">Home</a>
-                <a href="#about" class="menu-pill">About</a>
-                <a href="#products-section" class="menu-pill">Products</a>
-                <a href="#contact" class="menu-pill">Contact</a>
-                <div class="col-span-4 md:hidden mt-2">
-                    <a href="#catalogue-section" class="btn-portfolio block">Explore Portfolio</a>
-                </div>
-                <div class="hidden md:block">
-                     <a href="#catalogue-section" class="btn-portfolio block ml-4">Explore Portfolio</a>
-                </div>
-            </nav>
         </div>
-    </header>
 
- <section id="home" class="relative min-h-screen flex items-center bg-white pt-40 md:pt-0 overflow-hidden">
+        <div class="flex flex-col items-center md:items-end w-full md:w-auto mt-4 md:mt-0">
+            <nav class="flex items-center space-x-8 md:space-x-12 mb-2">
+                <a href="#home" class="text-xs md:text-sm font-black uppercase tracking-widest text-slate-700 hover:text-[#059669] transition-all">Home</a>
+                <a href="#about" class="text-xs md:text-sm font-black uppercase tracking-widest text-slate-700 hover:text-[#059669] transition-all">About</a>
+                <a href="#contact" class="text-xs md:text-sm font-black uppercase tracking-widest text-slate-700 hover:text-[#059669] transition-all">Contact</a>
+            </nav>
+
+            <div class="w-full md:w-auto">
+                <a href="#catalogue-section" class="btn-portfolio block text-center py-2 px-10 text-[9px] md:text-[10px] font-black uppercase tracking-widest bg-gradient-to-r from-[#059669] to-[#0284c7] text-white rounded-lg shadow-lg hover:scale-105 transition-all">
+                    Explore Portfolio
+                </a>
+            </div>
+        </div>
+    </div>
+</header>
+<section id="home" class="relative min-h-screen flex items-center bg-white pt-40 md:pt-32 overflow-hidden">
     <div class="absolute top-20 right-0 w-64 h-64 bg-[#0284c705] rounded-full blur-3xl -z-10"></div>
     <div class="absolute bottom-20 left-0 w-64 h-64 bg-[#05966905] rounded-full blur-3xl -z-10"></div>
 
-    <div class="max-w-7xl mx-auto w-full px-6">
-        <div class="flex flex-col lg:flex-row items-center gap-12">
+    <div class="max-w-7xl mx-auto w-full px-6 py-4">
+        <div class="flex flex-col lg:flex-row items-center gap-6">
 
-            <div class="w-full lg:w-1/2 space-y-8 text-center lg:text-left order-1">
-                <div class="space-y-4">
-                    <h2 class="text-5xl md:text-7xl lg:text-8xl font-black leading-tight text-slate-900">
+            <div class="w-full lg:w-1/2 space-y-4 text-center lg:text-left order-1">
+                <div class="space-y-2">
+                    <h2 class="text-5xl md:text-7xl lg:text-8xl font-black leading-tight text-slate-900 pt-4">
                         <span class="animate-text-shimmer bg-clip-text text-transparent bg-gradient-to-r from-[#059669] via-[#0284c7] to-[#059669] bg-[length:200%_auto]">
                             Better Cure
                         </span><br>
                         <span class="text-slate-800 tracking-tight">For Better Life.</span>
                     </h2>
-                    <p class="text-gray-500 text-lg md:text-xl font-medium max-w-md mx-auto lg:mx-0 leading-relaxed">
+                    <p class="text-gray-500 text-base md:text-lg font-medium max-w-md mx-auto lg:mx-0 leading-snug">
                         Bridging Ayurvedic tradition with modern medical precision for a healthier tomorrow.
                     </p>
                 </div>
 
-                <div class="relative flex items-center justify-between w-full max-w-md mx-auto lg:mx-0 mt-10 px-2">
+                <div class="relative flex flex-col items-center lg:items-start pt-2">
+                    <div class="relative flex items-center justify-center lg:justify-start w-full min-h-[110px]">
 
-    <a href="#products-section" class="flex flex-col items-center gap-2 group animate-float" style="animation-delay: 0.2s;">
-        <div class="w-14 h-14 rounded-full bg-white border-2 border-emerald-500 flex items-center justify-center shadow-lg group-hover:bg-emerald-500 group-hover:text-white transition-all duration-500">
-            <span class="text-2xl group-hover:scale-110 transition-transform">🌿</span>
-        </div>
-        <span class="text-[9px] font-black text-emerald-700 uppercase tracking-tighter">Ayurvedic</span>
-    </a>
+                        <a id="ayurvedic-opt" href="#ayurvedic-section" class="absolute flex flex-col items-center gap-1 opacity-0 transition-all duration-500 pointer-events-none z-10">
+                            <div class="w-12 h-12 md:w-14 md:h-14 rounded-full bg-white border-2 border-emerald-500 flex items-center justify-center shadow-lg">
+                                <span class="text-xl">🌿</span>
+                            </div>
+                            <span class="text-[8px] font-black text-emerald-700 uppercase">Ayurvedic</span>
+                        </a>
 
-    <div class="flex flex-col gap-3 z-10">
-        <a href="#products-section" class="px-6 py-3 bg-[#059669] text-white rounded-xl font-black text-[10px] uppercase tracking-widest text-center shadow-lg hover:shadow-emerald-200 transition-all active:scale-95">
-            Our Medicines
-        </a>
-        <a href="#contact" class="px-6 py-3 border-2 border-[#0284c7] text-[#0284c7] rounded-xl font-black text-[10px] uppercase tracking-widest text-center hover:bg-blue-50 transition-all active:scale-95">
-            Contact Us
-        </a>
-    </div>
+                        <button onclick="toggleProducts()" class="relative z-30 px-10 py-4 bg-[#059669] text-white rounded-2xl font-black text-[10px] uppercase tracking-[0.2em] shadow-xl active:scale-95 transition-all">
+                            Our Products
+                        </button>
 
-    <a href="#products-section" class="flex flex-col items-center gap-2 group animate-float" style="animation-delay: 0.5s;">
-        <div class="w-14 h-14 rounded-full bg-white border-2 border-blue-500 flex items-center justify-center shadow-lg group-hover:bg-blue-600 group-hover:text-white transition-all duration-500">
-            <span class="text-2xl group-hover:scale-110 transition-transform">💊</span>
-        </div>
-        <span class="text-[9px] font-black text-blue-700 uppercase tracking-tighter">Medicine</span>
-    </a>
+                        <a id="medicine-opt" href="#medicine-section" class="absolute flex flex-col items-center gap-1 opacity-0 transition-all duration-500 pointer-events-none z-10">
+                            <div class="w-12 h-12 md:w-14 md:h-14 rounded-full bg-white border-2 border-blue-500 flex items-center justify-center shadow-lg">
+                                <span class="text-xl">💊</span>
+                            </div>
+                            <span class="text-[8px] font-black text-blue-700 uppercase">Allopathic</span>
+                        </a>
+                    </div>
+                </div>
 
-</div>
-                <div class="flex flex-col items-center justify-center mt-12 animate-bounce opacity-50">
-    <span class="text-[10px] font-black text-slate-400 uppercase tracking-[0.3em] mb-2">Scroll Down</span>
-    <svg class="w-6 h-6 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
-    </svg>
-</div>
-
-                <div class="lg:hidden mt-12 flex justify-center">
-                    <div class="relative w-64 h-64">
+                <div class="lg:hidden mt-2 flex justify-center">
+                    <div class="relative w-48 h-48">
                         <img src="https://i.postimg.cc/MHwxL6NL/Whats-App-Image-2026-02-11-at-8-20-37-PM.jpg"
-                             class="relative w-full h-full object-contain animate-float"
+                             class="w-full h-full object-contain animate-float"
                              alt="Z Pharmaka Logo Mobile">
                     </div>
                 </div>
             </div>
 
             <div class="hidden lg:w-1/2 lg:flex justify-center lg:justify-end order-2">
-                <div class="relative w-[450px] h-[450px] animate-float">
+                <div class="relative w-[400px] h-[400px] animate-float">
                     <img src="https://i.postimg.cc/MHwxL6NL/Whats-App-Image-2026-02-11-at-8-20-37-PM.jpg"
                          class="w-full h-full object-contain"
                          alt="Z Pharmaka Logo Desktop">
-
-                    <div class="absolute -bottom-6 -left-6 bg-white p-6 rounded-3xl shadow-xl border border-slate-50 hidden md:block">
-                        <p class="text-[10px] font-black text-[#059669] uppercase tracking-widest">Quality Assurance</p>
-                        <p class="text-slate-800 font-bold text-sm uppercase"></p>
-                    </div>
                 </div>
             </div>
 
@@ -688,17 +675,53 @@ section h3 {
     </div>
 </footer>
 <script>
-    // 3. Product Modal Logic
+    // 1. GLOBAL VARIABLE FOR TOGGLE
+    let productIsOpen = false;
+
+    // 2. TOGGLE PRODUCTS FUNCTION (FIXED FOR LAPTOP & MOBILE)
+    function toggleProducts() {
+        const ayurvedic = document.getElementById('ayurvedic-opt');
+        const medicine = document.getElementById('medicine-opt');
+
+        if (!ayurvedic || !medicine) return; // Error handling
+
+        const isMobile = window.innerWidth < 1024;
+        // Distance: Laptop-il nalla gap kittan 180px, Mobile-il 135px
+        const distance = isMobile ? "135px" : "180px";
+
+        if (!productIsOpen) {
+            // Slide Out (Purathekku varunnu)
+            ayurvedic.style.opacity = "1";
+            ayurvedic.style.pointerEvents = "auto";
+            ayurvedic.style.transform = `translateX(-${distance})`;
+
+            medicine.style.opacity = "1";
+            medicine.style.pointerEvents = "auto";
+            medicine.style.transform = `translateX(${distance})`;
+
+            productIsOpen = true;
+        } else {
+            // Slide In (Ullilekku pokunnu)
+            ayurvedic.style.opacity = "0";
+            ayurvedic.style.pointerEvents = "none";
+            ayurvedic.style.transform = "translateX(0)";
+
+            medicine.style.opacity = "0";
+            medicine.style.pointerEvents = "none";
+            medicine.style.transform = "translateX(0)";
+
+            productIsOpen = false;
+        }
+    }
+
+    // 3. PRODUCT MODAL LOGIC
     function openProduct(name, comp, desc) {
         document.getElementById('modal-title').innerText = name;
         document.getElementById('modal-comp').innerText = comp;
         document.getElementById('modal-desc').innerText = desc;
 
-        const message = encodeURIComponent(
-            `Hi Z Pharmaka, I would like to know more about ${name} (${comp}).`
-        );
-        document.getElementById('modal-wa').href =
-            `https://wa.me/919036633621?text=${message}`;
+        const message = encodeURIComponent(`Hi Z Pharmaka, I would like to know more about ${name} (${comp}).`);
+        document.getElementById('modal-wa').href = `https://wa.me/919036633621?text=${message}`;
 
         const modal = document.getElementById('product-modal');
         modal.style.display = 'flex';
@@ -711,7 +734,40 @@ section h3 {
         document.body.style.overflow = 'auto';
     }
 
-    // 4. Close modal if clicking outside
+    // 4. CONTACT FORM & REDIRECT LOGIC
+    function sendTo(platform) {
+        const name = document.getElementById('c_name').value;
+        const email = document.getElementById('c_email').value;
+        const phoneOnly = document.getElementById('c_phone').value;
+        const phone = document.getElementById('c_code').value + phoneOnly;
+        const purpose = document.getElementById('c_purpose').value;
+        const msg = document.getElementById('c_message').value;
+
+        if (!name || !msg) {
+            alert("Please fill Name and Message");
+            return;
+        }
+
+        if (!/^\d+$/.test(phoneOnly)) {
+            alert("Phone number-ൽ numbers മാത്രം നൽകൂ");
+            return;
+        }
+
+        if (phoneOnly.length < 7) {
+            alert("Valid phone number നൽകൂ");
+            return;
+        }
+
+        const fullMsg = encodeURIComponent(`Name: ${name}\nEmail: ${email}\nPhone: ${phone}\nPurpose: ${purpose}\nMessage: ${msg}`);
+
+        if (platform === 'whatsapp') {
+            window.open(`https://wa.me/919036633621?text=${fullMsg}`, '_blank');
+        } else {
+            window.location.href = `mailto:zpharmaka@gmail.com?subject=Inquiry: ${purpose}&body=${fullMsg}`;
+        }
+    }
+
+    // 5. WINDOW CLICK LOGIC (MODAL CLOSE)
     window.onclick = function (event) {
         let modal = document.getElementById('product-modal');
         if (event.target == modal) {
@@ -719,64 +775,9 @@ section h3 {
         }
     };
 
-    // Quick message select function
     function setMessage(val) {
         document.getElementById('c_message').value = val;
     }
-
-    // Direct Redirect Function (with proper phone validation)
-    function sendTo(platform) {
-        const name = document.getElementById('c_name').value;
-        const email = document.getElementById('c_email').value;
-        const phoneOnly = document.getElementById('c_phone').value;
-        const phone =
-            document.getElementById('c_code').value + phoneOnly;
-        const purpose = document.getElementById('c_purpose').value;
-        const msg = document.getElementById('c_message').value;
-
-        // Basic required check
-        if (!name || !msg) {
-            alert("Please fill Name and Message");
-            return;
-        }
-
-        // ✅ Numbers-only phone check (NEW – main fix)
-        if (!/^\d+$/.test(phoneOnly)) {
-            alert("Phone number-ൽ numbers മാത്രം നൽകൂ");
-            return;
-        }
-
-        // ✅ Phone length check
-        if (phoneOnly.length < 7) {
-            alert("Valid phone number നൽകൂ");
-            return;
-        }
-
-        // ✅ Email check (only for email button)
-        if (platform === 'email' && !email) {
-            alert("Email enter ചെയ്യൂ");
-            return;
-        }
-
-        const fullMsg = encodeURIComponent(
-            `Name: ${name}
-Email: ${email}
-Phone: ${phone}
-Purpose: ${purpose}
-Message: ${msg}`
-        );
-
-        if (platform === 'whatsapp') {
-            window.open(
-                `https://wa.me/919036633621?text=${fullMsg}`,
-                '_blank'
-            );
-        } else {
-            window.location.href =
-                `mailto:zpharmaka@gmail.com?subject=Inquiry: ${purpose}&body=${fullMsg}`;
-        }
-    }
 </script>
-
 </body>
 </html>
