--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="DORVAZ A">
+                <img src="https://i.postimg.cc/m2kw6Qt9/Whats-App-Image-2026-02-24-at-8-12-16-PM.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="DORVAZ A">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Tablet</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">DORVAZ A</h4>
@@ -363,7 +363,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1576071804486-b8bc22106dbf?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="ZRAB">
+                <img src="https://i.postimg.cc/fTQ22868/Whats-App-Image-2026-02-24-at-8-12-23-PM-(2).jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="ZRAB">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Tablet</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">ZRAB</h4>
@@ -373,7 +373,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1471864190281-ad5f9f81ce4c?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="DUTAZIL">
+                <img src="https://i.postimg.cc/d3y2mKsq/Whats-App-Image-2026-02-24-at-8-12-17-PM-(1).jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="DUTAZIL">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Capsule</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">DUTAZIL</h4>
@@ -383,7 +383,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1607619056574-7b8d3ee536b2?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="ENZYMZ">
+                <img src="https://i.postimg.cc/WzBh8Ldn/Whats-App-Image-2026-02-24-at-8-12-17-PM.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="ENZYMZ">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Tablet</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">ENZYMZ</h4>
@@ -393,7 +393,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1550572017-ed200f545dec?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="CILOSTRAZ">
+                <img src="https://i.postimg.cc/9XZ17Grz/Whats-App-Image-2026-02-24-at-8-12-25-PM.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="CILOSTRAZ">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Tablet</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">CILOSTRAZ</h4>
@@ -403,7 +403,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1587854692152-cbe660dbbb88?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="DISOZ">
+                <img src="https://i.postimg.cc/m2kw6Qt9/Whats-App-Image-2026-02-24-at-8-12-16-PM.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="DISOZ">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Syrup</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">DISOZ</h4>
@@ -413,7 +413,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1550572017-4f1b402174c1?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="HEMOZ">
+                <img src="https://i.postimg.cc/wx2ggsg4/Whats-App-Image-2026-02-24-at-8-12-19-PM.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="HEMOZ">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Tablet</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">HEMOZ</h4>
@@ -423,7 +423,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1616671285410-09559942c47c?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="VITOZ">
+                <img src="https://i.postimg.cc/NM1G1N3D/Whats-App-Image-2026-02-24-at-8-12-18-PM.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="VITOZ">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Tablet</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">VITOZ</h4>
@@ -433,7 +433,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1626716586544-6c6132bf72e?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="ZLACT">
+                <img src="https://i.postimg.cc/vBPqSMwY/Whats-App-Image-2026-02-24-at-8-12-23-PM.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="ZLACT">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Lotion</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">ZLACT</h4>
@@ -443,7 +443,7 @@ section h3 {
 
         <div class="product-card allopathy-item group flex flex-col h-full">
             <div class="relative aspect-square mb-4 bg-slate-50 rounded-2xl overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1584308666744-24d5c474f2ae?q=80&w=500" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="CEFPOZ-200">
+                <img src="https://i.postimg.cc/J06fJZhC/Whats-App-Image-2026-02-24-at-8-12-21-PM.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform duration-500" alt="CEFPOZ-200">
                 <span class="absolute top-2 left-2 bg-blue-600 text-white text-[8px] font-bold px-2 py-1 rounded-md uppercase">Tablet</span>
             </div>
             <h4 class="font-extrabold text-sm md:text-base text-slate-800 line-clamp-1 uppercase">CEFPOZ-200</h4>
